# marimo-linear-regression-demo

./: ai_research_demo.py  main.py  pyproject.toml
__marimo__/session/: ai_research_demo.py.json  linear_regression_pitfalls.py.json
